CLIENT-1735: fix tx text wrap

--- a/src/modules/ui/directives/transaction/transactions.less
+++ b/src/modules/ui/directives/transaction/transactions.less
@@ -71,6 +71,11 @@ w-transaction .transaction {
     }
   }
 
+  .exchange-type {
+    white-space: nowrap;
+    margin-right: 5px;
+  }
+
   .icon {
     position: relative;
     width: 48px;
